--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -251,6 +251,14 @@ PreviewMaterial.Refraction=True
 PreviewMaterial.Lightmass=True
 PreviewMaterial.Previewing=True
 PreviewMaterial.ImportSettings=True
+MaterialExpressionConstant3Vector.MaterialExpressionConstant3Vector=True
+MaterialExpressionConstant3Vector.MaterialExpression=True
+MaterialExpressionConstant.MaterialExpressionConstant=True
+MaterialExpressionConstant.MaterialExpression=True
+LightmassImportanceVolume.TransformCommon=True
+LightmassImportanceVolume.Replication=True
+LightmassImportanceVolume.BrushSettings=True
+LightmassImportanceVolume.Actor=True
 
 [AssetEditorSubsystem]
 CleanShutdown=True
@@ -1120,6 +1128,7 @@ MRUItem0=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
 
 [PlacementMode]
 RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
+RecentlyPlaced=/Game/Materials/Black.Black;
 RecentlyPlaced=/Engine/BasicShapes/Plane.Plane;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Game/Geometry/Meshes/1M_Cube_DM.1M_Cube_DM;
 RecentlyPlaced=/Game/Geometry/Meshes/1M_Cube.1M_Cube;
@@ -1128,7 +1137,6 @@ RecentlyPlaced=/Game/Geometry/Meshes/1M_Cube.1M_Cube;
 InstalledPlugins=XRVisualization
 
 [/Script/UnrealEd.MaterialEditorOptions]
-bShowGrid=False
 bHideUnrelatedNodes=False
 bUseUnsortedMenus=False
 
@@ -1153,6 +1161,7 @@ Object=
 [AssetEditorToolkitTabLocation]
 /Game/Geometry/Meshes/1M_Cube_DM.1M_Cube_DM=1
 /Game/FirstPersonBP/Blueprints/FirstPersonProjectile.FirstPersonProjectile=1
+/Game/Materials/Black.Black=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
