colors and stuffs

--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -22,6 +22,7 @@ PreviewPlatformName=None
 PreviewShaderFormatName=None
 bPreviewFeatureLevelActive=False
 PreviewDeviceProfileName=None
+bAllowSelectTranslucent=False
 
 [/Script/UnrealEd.LevelEditorPlaySettings]
 LaptopScreenResolutions=(Description="Apple MacBook Air 11",Width=1366,Height=768,AspectRatio="16:9",bCanSwapAspectRatio=True,ProfileName="")
@@ -259,9 +260,101 @@ LightmassImportanceVolume.TransformCommon=True
 LightmassImportanceVolume.Replication=True
 LightmassImportanceVolume.BrushSettings=True
 LightmassImportanceVolume.Actor=True
+DestructibleMesh.Thumbnail=False
+DestructibleActor.AssetUserData=False
+K2Node_SetFieldsInStruct.PinOptions=True
+DestructibleComponent.TransformCommon=True
+DestructibleComponent.Materials=True
+DestructibleComponent.DestructibleComponent=True
+DestructibleComponent.Physics=True
+DestructibleComponent.Collision=True
+DestructibleComponent.Lighting=True
+DestructibleComponent.Rendering=True
+DestructibleComponent.SkinWeights=True
+DestructibleComponent.Navigation=True
+DestructibleComponent.VirtualTexture=True
+DestructibleComponent.Tags=True
+DestructibleComponent.Cooking=True
+MaterialExpressionConstant2Vector.MaterialExpressionConstant2Vector=True
+MaterialExpressionConstant2Vector.MaterialExpression=True
+MaterialExpressionScalarParameter.General=True
+MaterialExpressionScalarParameter.MaterialExpressionScalarParameter=True
+MaterialExpressionScalarParameter.MaterialExpression=True
+MaterialExpressionScalarParameter.CustomPrimitiveData=True
+MaterialExpressionMultiply.MaterialExpressionMultiply=True
+MaterialExpressionMultiply.MaterialExpression=True
+FirstPersonCharacter_C.TransformCommon=True
+FirstPersonCharacter_C.Animation=True
+FirstPersonCharacter_C.Mesh=True
+FirstPersonCharacter_C.Clothing=True
+FirstPersonCharacter_C.Physics=True
+FirstPersonCharacter_C.Collision=True
+FirstPersonCharacter_C.MasterPoseComponent=True
+FirstPersonCharacter_C.Lighting=True
+FirstPersonCharacter_C.ClothingSimulation=True
+FirstPersonCharacter_C.Rendering=True
+FirstPersonCharacter_C.SkinWeights=True
+FirstPersonCharacter_C.Navigation=True
+FirstPersonCharacter_C.VirtualTexture=True
+FirstPersonCharacter_C.Tags=True
+FirstPersonCharacter_C.Activation=True
+FirstPersonCharacter_C.Cooking=True
+FirstPersonCharacter_C.Character Movement (General Settings)=True
+FirstPersonCharacter_C.Character Movement: Walking=True
+FirstPersonCharacter_C.Character Movement: Jumping / Falling=True
+FirstPersonCharacter_C.Character Movement (Networking)=True
+FirstPersonCharacter_C.Character Movement: Swimming=True
+FirstPersonCharacter_C.Character Movement: Flying=True
+FirstPersonCharacter_C.Character Movement: Custom Movement=True
+FirstPersonCharacter_C.Character Movement (Rotation Settings)=True
+FirstPersonCharacter_C.Character Movement: Physics Interaction=True
+FirstPersonCharacter_C.Character Movement=True
+FirstPersonCharacter_C.Character Movement: Avoidance=True
+FirstPersonCharacter_C.RootMotion=True
+FirstPersonCharacter_C.Character Movement: NavMesh Movement=True
+FirstPersonCharacter_C.NavMovement=True
+FirstPersonCharacter_C.Velocity=True
+FirstPersonCharacter_C.PlanarMovement=True
+FirstPersonCharacter_C.MovementComponent=True
+FirstPersonCharacter_C.Shape=True
+FirstPersonCharacter_C.Character=True
+FirstPersonCharacter_C.Camera=True
+FirstPersonCharacter_C.Pawn=True
+FirstPersonCharacter_C.Replication=True
+FirstPersonCharacter_C.Input=True
+FirstPersonCharacter_C.Actor=True
+Actor.TransformCommon=True
+Actor.Rendering=True
+Actor.Replication=True
+Actor.Collision=True
+Actor.Actor=True
+1M_Cube_DM_C.Tick=True
+1M_Cube_DM_C.Replication=True
+1M_Cube_DM_C.Rendering=True
+1M_Cube_DM_C.Collision=True
+1M_Cube_DM_C.Actor=True
+1M_Cube_DM_C.Input=True
+K2Node_VariableSet.Variable=True
+K2Node_VariableSet.DefaultValueCategory=True
+K2Node_VariableSet.Events=True
+DestructibleComponent.Variable=True
+DestructibleComponent.Sockets=True
+DestructibleComponent.ComponentTick=True
+DestructibleComponent.ComponentReplication=True
+DestructibleComponent.Events=True
+K2Node_VariableGet.DefaultValueCategory=True
+1M_Cube_DM_C.TransformCommon=True
+PropertyWrapper.Variable=True
+PropertyWrapper.Events=True
+K2Node_BreakStruct.PinOptions=True
+K2Node_MakeStruct.PinOptions=True
+MaterialExpression.MaterialExpression=True
 
 [AssetEditorSubsystem]
 CleanShutdown=True
+OpenAssetsAtExit=/Game/Materials/GlowGreen.GlowGreen
+OpenAssetsAtExit=/Game/Materials/GlowBlue.GlowBlue
+OpenAssetsAtExit=/Game/Materials/GlowRed.GlowRed
 
 [RootWindow]
 ScreenPosition=X=200.000 Y=145.000
@@ -1127,10 +1220,15 @@ BlueprintGraph.LastCompileMethod=Unknown
 MRUItem0=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
 
 [PlacementMode]
-RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
-RecentlyPlaced=/Game/Materials/Black.Black;
-RecentlyPlaced=/Engine/BasicShapes/Plane.Plane;/Engine/Transient.ActorFactoryBasicShape_0
+RecentlyPlaced=/Game/Materials/GlowRed.GlowRed;
+RecentlyPlaced=/Game/Materials/GlowGreen.GlowGreen;
+RecentlyPlaced=/Game/Blueprints/1M_Cube_DM.1M_Cube_DM;
 RecentlyPlaced=/Game/Geometry/Meshes/1M_Cube_DM.1M_Cube_DM;
+RecentlyPlaced=/Game/Materials/GlowYellow.GlowYellow;
+RecentlyPlaced=/Game/Meshes/StaticMesh.StaticMesh;
+RecentlyPlaced=/Game/Materials/Black.Black;
+RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
+RecentlyPlaced=/Engine/BasicShapes/Plane.Plane;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Game/Geometry/Meshes/1M_Cube.1M_Cube;
 
 [PluginBrowser]
@@ -1142,26 +1240,34 @@ bUseUnsortedMenus=False
 
 [DetailCustomWidgetExpansion]
 DestructibleActor=DestructibleActor.Rendering.TextureStreaming,DestructibleActor.Rendering.LOD,
+CapsuleComponent=
+FirstPersonCharacter_C=DestructibleActor.Rendering.TextureStreaming,DestructibleActor.Rendering.LOD,
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Materials/Black
-MRUItem1=/Game/FirstPersonBP/Blueprints/FirstPersonProjectile
-MRUItem2=/Game/Geometry/Meshes/1M_Cube_DM
+MRUItem0=/Game/Materials/GlowRed
+MRUItem1=/Game/Materials/GlowGreen
+MRUItem2=/Game/Materials/GlowBlue
+MRUItem3=/Game/Blueprints/1M_Cube_DM
+MRUItem4=/Game/Materials/GlowYellow
+MRUItem5=/Game/Geometry/Meshes/1M_Cube_DM
+MRUItem6=/Game/Materials/Black
+MRUItem7=/Game/FirstPersonBP/Blueprints/FirstPersonProjectile
 
 [DetailCategoriesAdvanced]
 DestructibleActor.Physics=True
 
 [DetailPropertyExpansion]
-DestructibleActor="\"Object.Destruction.DestructibleComponent.Object.DestructibleComponent.FractureEffects\" \"Object.Destruction.DestructibleComponent.Object.DestructibleComponent.FractureEffects.FractureEffects[0]\" \"Object.Destruction.DestructibleComponent.Object.DestructibleComponent.FractureEffects.FractureEffects[1]\" "
-DestructibleMesh="\"Object.DestructibleMesh.DefaultDestructibleParameters.DebrisParameters.ValidBounds\" \"Object.DestructibleMesh.DefaultDestructibleParameters.DepthParameters.DepthParameters[1]\" \"Object.Effects.FractureEffects.FractureEffects[1]\" \"Object.SkeletalMesh.Materials.Materials[1]\" "
-SkeletalMesh="\"Object.DestructibleMesh.DefaultDestructibleParameters.DebrisParameters.ValidBounds\" \"Object.DestructibleMesh.DefaultDestructibleParameters.DepthParameters.DepthParameters[1]\" \"Object.Effects.FractureEffects.FractureEffects[1]\" \"Object.SkeletalMesh.Materials.Materials[1]\" "
-StreamableRenderAsset="\"Object.DestructibleMesh.DefaultDestructibleParameters.DebrisParameters.ValidBounds\" \"Object.DestructibleMesh.DefaultDestructibleParameters.DepthParameters.DepthParameters[1]\" \"Object.Effects.FractureEffects.FractureEffects[1]\" \"Object.SkeletalMesh.Materials.Materials[1]\" "
+DestructibleActor="\"Object.Destruction.DestructibleComponent.Object.DestructibleComponent.FractureEffects\" \"Object.Destruction.DestructibleComponent.Object.DestructibleComponent.FractureEffects.FractureEffects[0]\" \"Object.Destruction.DestructibleComponent.Object.DestructibleComponent.FractureEffects.FractureEffects[1]\" \"Object.Destruction.DestructibleComponent.Object.Collision.BodyInstance\" "
+DestructibleMesh="\"Object.DestructibleMesh.DefaultDestructibleParameters.DebrisParameters.ValidBounds\" \"Object.DestructibleMesh.DefaultDestructibleParameters.DepthParameters.DepthParameters[1]\" \"Object.Effects.FractureEffects\" \"Object.Effects.FractureEffects.FractureEffects[1]\" \"Object.SkeletalMesh.Materials.Materials[1]\" "
+SkeletalMesh="\"Object.DestructibleMesh.DefaultDestructibleParameters.DebrisParameters.ValidBounds\" \"Object.DestructibleMesh.DefaultDestructibleParameters.DepthParameters.DepthParameters[1]\" \"Object.Effects.FractureEffects\" \"Object.Effects.FractureEffects.FractureEffects[1]\" \"Object.SkeletalMesh.Materials.Materials[1]\" "
+StreamableRenderAsset="\"Object.DestructibleMesh.DefaultDestructibleParameters.DebrisParameters.ValidBounds\" \"Object.DestructibleMesh.DefaultDestructibleParameters.DepthParameters.DepthParameters[1]\" \"Object.Effects.FractureEffects\" \"Object.Effects.FractureEffects.FractureEffects[1]\" \"Object.SkeletalMesh.Materials.Materials[1]\" "
 Object=
 
 [AssetEditorToolkitTabLocation]
 /Game/Geometry/Meshes/1M_Cube_DM.1M_Cube_DM=1
 /Game/FirstPersonBP/Blueprints/FirstPersonProjectile.FirstPersonProjectile=1
 /Game/Materials/Black.Black=1
+/Game/Materials/GlowYellow.GlowYellow=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
