--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -150,6 +150,8 @@ ContentBrowserTab1.ViewMode=0
 ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
 ContentBrowserTab1.SelectedPaths=/Game/Blueprints
+AssetPropertyPicker.ThumbnailSizeScale=0.100000
+AssetPropertyPicker.CurrentViewType=0
 
 [EditorStartup]
 LastLevel=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
@@ -380,6 +382,21 @@ StaticMeshComponent.Tags=True
 StaticMeshComponent.ComponentReplication=True
 StaticMeshComponent.Cooking=True
 StaticMeshComponent.Events=True
+Thereyago_C.Default=True
+BoxComponent.Variable=True
+BoxComponent.TransformCommon=True
+BoxComponent.Sockets=True
+BoxComponent.Shape=True
+BoxComponent.Navigation=True
+BoxComponent.ComponentTick=True
+BoxComponent.Rendering=True
+BoxComponent.Physics=True
+BoxComponent.Collision=True
+BoxComponent.Tags=True
+BoxComponent.ComponentReplication=True
+BoxComponent.Cooking=True
+BoxComponent.Events=True
+Thereyago_C.TransformCommon=True
 
 [AssetEditorSubsystem]
 CleanShutdown=True
@@ -1243,11 +1260,14 @@ MovieSceneCapture.TimeStamp=2021.07.19-17.02.36
 MovieSceneCapture.LastCompileMethod=Unknown
 BlueprintGraph.TimeStamp=2021.07.19-17.02.24
 BlueprintGraph.LastCompileMethod=Unknown
+HierarchicalLODUtilities.TimeStamp=2021.07.19-17.02.30
+HierarchicalLODUtilities.LastCompileMethod=Unknown
 
 [MRU]
 MRUItem0=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
 
 [PlacementMode]
+RecentlyPlaced=/Game/Blueprints/Thereyago.Thereyago;
 RecentlyPlaced=/Game/Materials/GlowRed.GlowRed;
 RecentlyPlaced=/Game/Materials/GlowGreen.GlowGreen;
 RecentlyPlaced=/Game/Blueprints/1M_Cube_DM.1M_Cube_DM;
