--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -149,7 +149,7 @@ ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ViewMode=0
 ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game
+ContentBrowserTab1.SelectedPaths=/Game/Blueprints
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 
@@ -397,9 +397,30 @@ BoxComponent.ComponentReplication=True
 BoxComponent.Cooking=True
 BoxComponent.Events=True
 Thereyago_C.TransformCommon=True
+LaunchCharacter_Yarbrough_C.TransformCommon=True
+LaunchCharacter_Yarbrough_C.Rendering=True
+LaunchCharacter_Yarbrough_C.Replication=True
+LaunchCharacter_Yarbrough_C.Collision=True
+LaunchCharacter_Yarbrough_C.Input=True
+LaunchCharacter_Yarbrough_C.Actor=True
+LaunchCharacter_Yarbrough_C.Tick=True
+LaunchCharacter_Yarbrough_C.Default=True
+PostProcessVolume.TransformCommon=True
+PostProcessVolume.Lens=True
+PostProcessVolume.Color Grading=True
+PostProcessVolume.Film=True
+PostProcessVolume.Rendering Features=True
+PostProcessVolume.PostProcessVolumeSettings=True
+PostProcessVolume.Replication=True
+PostProcessVolume.BrushSettings=True
+PostProcessVolume.Actor=True
 
 [AssetEditorSubsystem]
 CleanShutdown=True
+OpenAssetsAtExit=/Game/Blueprints/Thereyago.Thereyago
+OpenAssetsAtExit=/Game/Materials/GlowPink.GlowPink
+OpenAssetsAtExit=/Game/Materials/Glow.Glow
+OpenAssetsAtExit=/Game/Materials/GlowRed.GlowRed
 
 [RootWindow]
 ScreenPosition=X=200.000 Y=145.000
@@ -1267,9 +1288,14 @@ HierarchicalLODUtilities.LastCompileMethod=Unknown
 MRUItem0=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
 
 [PlacementMode]
-RecentlyPlaced=/Game/Blueprints/Thereyago.Thereyago;
-RecentlyPlaced=/Game/Materials/GlowRed.GlowRed;
+RecentlyPlaced=/Script/Engine.TextRenderActor;/Engine/Transient.ActorFactoryTextRender_0
+RecentlyPlaced=/Game/Materials/Glow.Glow;
+RecentlyPlaced=/Game/Materials/GlowPink.GlowPink;
 RecentlyPlaced=/Game/Materials/GlowGreen.GlowGreen;
+RecentlyPlaced=/Game/Materials/GlowBlue.GlowBlue;
+RecentlyPlaced=/Game/Materials/GlowRed.GlowRed;
+RecentlyPlaced=/Game/Blueprints/Thereyago.Thereyago;
+RecentlyPlaced=/Game/Blueprints/Thereyago.Thereyago;
 RecentlyPlaced=/Game/Blueprints/1M_Cube_DM.1M_Cube_DM;
 RecentlyPlaced=/Game/Geometry/Meshes/1M_Cube_DM.1M_Cube_DM;
 RecentlyPlaced=/Game/Materials/GlowYellow.GlowYellow;
@@ -1285,6 +1311,7 @@ InstalledPlugins=XRVisualization
 [/Script/UnrealEd.MaterialEditorOptions]
 bHideUnrelatedNodes=False
 bUseUnsortedMenus=False
+bShowGrid=False
 
 [DetailCustomWidgetExpansion]
 DestructibleActor=DestructibleActor.Rendering.TextureStreaming,DestructibleActor.Rendering.LOD,
@@ -1292,16 +1319,19 @@ CapsuleComponent=
 FirstPersonCharacter_C=DestructibleActor.Rendering.TextureStreaming,DestructibleActor.Rendering.LOD,
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprints/Thereyago
-MRUItem1=/Game/Blueprints/Launch
-MRUItem2=/Game/Materials/GlowRed
-MRUItem3=/Game/Materials/GlowGreen
-MRUItem4=/Game/Materials/GlowBlue
-MRUItem5=/Game/Blueprints/1M_Cube_DM
-MRUItem6=/Game/Materials/GlowYellow
-MRUItem7=/Game/Geometry/Meshes/1M_Cube_DM
-MRUItem8=/Game/Materials/Black
-MRUItem9=/Game/FirstPersonBP/Blueprints/FirstPersonProjectile
+MRUItem0=/Game/Materials/GlowRed
+MRUItem1=/Game/Materials/Glow
+MRUItem2=/Game/Materials/GlowPink
+MRUItem3=/Game/Blueprints/Thereyago
+MRUItem4=/Game/Blueprints/LaunchCharacter_Yarbrough
+MRUItem5=/Game/Blueprints/Launch
+MRUItem6=/Game/Materials/GlowGreen
+MRUItem7=/Game/Materials/GlowBlue
+MRUItem8=/Game/Blueprints/1M_Cube_DM
+MRUItem9=/Game/Materials/GlowYellow
+MRUItem10=/Game/Geometry/Meshes/1M_Cube_DM
+MRUItem11=/Game/Materials/Black
+MRUItem12=/Game/FirstPersonBP/Blueprints/FirstPersonProjectile
 
 [DetailCategoriesAdvanced]
 DestructibleActor.Physics=True
@@ -1312,6 +1342,9 @@ DestructibleMesh="\"Object.DestructibleMesh.DefaultDestructibleParameters.Debris
 SkeletalMesh="\"Object.DestructibleMesh.DefaultDestructibleParameters.DebrisParameters.ValidBounds\" \"Object.DestructibleMesh.DefaultDestructibleParameters.DepthParameters.DepthParameters[1]\" \"Object.Effects.FractureEffects\" \"Object.Effects.FractureEffects.FractureEffects[1]\" \"Object.SkeletalMesh.Materials.Materials[1]\" "
 StreamableRenderAsset="\"Object.DestructibleMesh.DefaultDestructibleParameters.DebrisParameters.ValidBounds\" \"Object.DestructibleMesh.DefaultDestructibleParameters.DepthParameters.DepthParameters[1]\" \"Object.Effects.FractureEffects\" \"Object.Effects.FractureEffects.FractureEffects[1]\" \"Object.SkeletalMesh.Materials.Materials[1]\" "
 Object=
+PostProcessVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+Volume=
+Brush=
 
 [AssetEditorToolkitTabLocation]
 /Game/Geometry/Meshes/1M_Cube_DM.1M_Cube_DM=1
@@ -1319,6 +1352,7 @@ Object=
 /Game/Materials/Black.Black=1
 /Game/Materials/GlowYellow.GlowYellow=1
 /Game/Blueprints/Thereyago.Thereyago=1
+/Game/Blueprints/LaunchCharacter_Yarbrough.LaunchCharacter_Yarbrough=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -1413,4 +1447,7 @@ bMaterialQualityUsed[0]=0
 bMaterialQualityUsed[1]=1
 bMaterialQualityUsed[2]=0
 bMaterialQualityUsed[3]=0
+
+[ColorPickerUI]
+bWheelMode=False
 
